03Jan99========================================================================
1. Upped the version no !!!!
2. made the DXProtocol routines much less sensitive to '~' characters (JE1SGH)
3. added '^' -> ':' conversions on ann, talk and dx commands
4. You can now send messages containing blank lines.
5. Fixed merge command problem reported by G0RDI
28Dec98========================================================================
1. Crossed fingers, got rid of the instabilities caused by execing programs
at vast speed (reduced it significantly anyway).
2. Personals will now move if homenode is known.
3. Added Local.pm for doing local specials
27Dec98========================================================================
1. Various detail changes to remove some more warning with -w on
2. Added DXCron handling - you can do crontabs now.
3. Added show/program command so you can see where it is loading your .pm files
from.
4. Added pc26/27 replies to locally connected cluster's merge (pc25) requests
5. Added spotters DXCC and original cluster to Spot data files.
23Dec98========================================================================
1. Reindented various things
2. Added missing $main::mycall on the end of outgoing PC11s (!)
3. Check that PC16/17 node calls really are nodes (AFAIAC).
22Dec98========================================================================
1. Added brackets round callsign if not here for prompt
2. Added Iain's set/password routine
3. Fixed sh/dx problems (the xemacs indent region messed Spot.pm up!)
4. Issued 1.15
21Dec98============= late! ====================================================
1. fixed problem with missing DXDebug in DXProt.
2. Fixed DXDebug so that it actually works as advertised with and without 
trailing \n. 
3. Added deduping of WWV spots as well (at for date,time,sfi,k and i) dups
4. Replaced the 0 in "02-Dec-1998" with ' ' so it reads " 2-Dec-1998", it seems