@@ -66,6 +66,7 @@ package DXM;
 				lockoutun => '$_[0] Unlocked',
 				m2 => '$_[0] Information: $_[1]',
 				merge1 => 'Merge request for $_[1] spots and $_[2] WWV sent to $_[0]',
+				msgnew => 'New mail has arrived for you',
 				namee1 => 'Please enter your name, set/name <your name>',
 				namee2 => 'Can\'t find user $_[0]!',
 				name => 'Your name is now \"$_[0]\"',
@@ -96,11 +97,15 @@ package DXM;
 				read2 => 'Msg $_[0] not found',
 				read3 => 'Msg $_[0] not available',
 				shutting => '$main::mycall shutting down...',
+				sloc => 'Cluster lat $_[0] long $_[1], DON\'T FORGET TO CHANGE YOUR DXVars.pm',
+				sqra => 'Cluster QRA Locator$_[0], DON\'T FORGET TO CHANGE YOUR DXVars.pm',
 				talks => 'Talk flag set on $_[0]',
 				talku => 'Talk flag unset on $_[0]',
 				usernf => '*** User record for $_[0] not found ***',
 				wwvs => 'WWV flag set on $_[0]',
 				wwvu => 'WWV flag unset on $_[0]',
+				wxs => 'WX flag set on $_[0]',
+				wxu => 'WX flag unset on $_[0]',
 		},
   fr => {
 		},
