@@ -20,9 +20,6 @@ BEGIN {
 	
 	unshift @INC, "$root/perl";	# this IS the right way round!
 	unshift @INC, "$root/local";
-
-#	require Exporter;
-#	$Exporter::Verbose = 1;
 }
 
 use Msg;
@@ -52,7 +49,7 @@ package main;
 
 @inqueue = ();					# the main input queue, an array of hashes
 $systime = 0;					# the time now (in seconds)
-$version = "1.20";				# the version no of the software
+$version = "1.21";				# the version no of the software
 $starttime = 0;                 # the starting time of the cluster   
  
 # handle disconnections
